<resources>
    <string name="app_name">ChatApp</string>

    <string name="title_home">Home</string>
    <string name="title_contact">Contact</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>

    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="place_holder_notification_info">Notification Information</string>
    <string name="place_holder_weather_description">Weather Description</string>
    <string name="place_holder_location">Location Display</string>
    <string name="place_holder_temperature">Current Temperature</string>
    <string name="place_holder_weather">Weather Place Holder</string>
    <string name="place_holder_notification">Notification Place Holder</string>
    <string name="text_home_welcome">WELCOME TO CHATTER</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password:</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <!--    weather -->

    <string name="text_city_name">Tacoma</string>
    <string name="text_unit">°F</string>
    <string name="text_condition">overcast clouds</string>
    <string name="action_enter_zipcode">enter zipcode</string>
    <string name="text_minimum_temp">61</string>
    <string name="text_maximum_temp">78</string>
    <string name="text_temperature">70</string>
    <string name="text_weather_time">11:00 am</string>
    <string name="text_weather_date">wednesday</string>
    <string name="text_daily_weather">daily weather</string>
    <string name="text_weekly_weather">weekly weather</string>
    <string name="recycler_view_hourly">recycler_view_hourly</string>
    <string name="text_hourly_weather">hourly weather</string>
    <string name="confirm">confirm</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>
    <string name="button_forecast">button forecast</string>
    <string name="full_day">hourly weather</string>
    <string name="todo">todo</string>
    <string name="label_location">Current location</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_map">map</string>
    <string name="weather_stats">Forecast</string>
    <string name="weather_map">Map</string>


    <!--    contacts-->
    <string name="text_first_name_contact">First Name</string>
    <string name="text_last_name_contact">Last Name</string>
    <string name="text_email_contact">Email@Email.com</string>
    <string name="tab_menu_friend_contact">Friend</string>
    <string name="tab_menu_request_contact">Request</string>
    <string name="tab_menu_receive_contact">Receive</string>
    <string name="contact_button_add">ADD</string>
    <string name="contact_button_delete">DELETE</string>
    <string name="contact_add_text">Please type email</string>
    <string name="contact_sample_text_first_name">ITs my First Name</string>
    <string name="contact_sample_text_last_name">ITs my Last Name</string>
    <string name="contact_sample_text_user_name">Sample User Name</string>
    <string name="contact_sample_text_email">ITs my Email@Email.com</string>
    <string name="contact_sample_icon_description">Contact Icon</string>
    <string name="contact_add_icon_description">Contact add Icon</string>
    <string name="contact_decline_icon_description">Contact decline Icon</string>
    <string name="contact_fragment_name">Contact</string>

    <!--Resources for the email verification-->
    <string name="email_code_hint">Please Enter Email Verification Code</string>
    <string name="submit_email">Submit</string>
    <string name="image_description_weather">image_icon_weather</string>

    <string name="base_url">https://group1-tcss450-project.herokuapp.com/</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="theme_title">Theme</string>

    <string name="shared_theme_pref">App Theme Preference</string>
    <string name="theme_pref">Theme Preference</string>

    <string name="label_location">Current location</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_map">map</string>

    <string name="weather_stats">Stats</string>
    <string name="weather_map">Map</string>
    <string name='action_change_password'>Change Password</string>
    <string name="change_password">Change Password Fragment Tag</string>

</resources>