<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.tcss450.chatapp_group1.ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_weather"
        android:layout_width="405dp"
        android:layout_height="67dp"
        android:text="@string/place_holder_weather"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_notification"
        android:layout_width="392dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place_holder_notification"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_weather_description" />

    <ImageView
        android:id="@+id/home_weather_sample"
        android:layout_width="130dp"
        android:layout_height="115dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_weather_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_weather" />

    <TextView
        android:id="@+id/home_location"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/place_holder_location"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/home_weather_sample"
        app:layout_constraintTop_toBottomOf="@+id/home_weather" />

    <TextView
        android:id="@+id/home_temperature"
        android:layout_width="233dp"
        android:layout_height="84dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/place_holder_temperature"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/home_weather_sample"
        app:layout_constraintTop_toBottomOf="@+id/home_location" />

    <TextView
        android:id="@+id/home_weather_description"
        android:layout_width="380dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/place_holder_weather_description"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_weather_sample" />

    <TextView
        android:id="@+id/notification_information"
        android:layout_width="404dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place_holder_notification_info"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_notification" />

    <TextView
        android:id="@+id/notification_information2"
        android:layout_width="404dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place_holder_notification_info"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_information" />

</androidx.constraintlayout.widget.ConstraintLayout>