<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hourly_card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_temperature"
        app:layout_constraintTop_toTopOf="@+id/text_temperature">

        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="82dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/sunnyweather"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_weather_time"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_weather_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_weather_time"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorOffWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="42dp"
            android:layout_height="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_temperature"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_condition"
            app:layout_constraintTop_toBottomOf="@+id/text_weather_time" />

        <TextView
            android:id="@+id/text_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="13dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_condition"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_weather"
            app:layout_constraintTop_toBottomOf="@+id/text_weather_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>