<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/text_temperature"
        app:layout_constraintTop_toTopOf="@+id/text_temperature">


        <TextView
            android:id="@+id/text_weather_date"
            android:layout_width="83dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_weather_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_weather"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/sunnyweather"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_condition"
            android:layout_width="77dp"
            android:layout_height="28dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="27dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_condition"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_weather"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_minimum_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toEndOf="@+id/text_condition"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/text_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_maximum_temp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.721"
            app:layout_constraintStart_toEndOf="@+id/text_min_temp"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature"
            app:layout_constraintVertical_bias="0.023" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>