<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/cardview_dark_background"
    android:backgroundTint="@color/darkGray"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contact_search_card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">

        <ImageView
            android:id="@+id/contact_friend_icon"
            android:layout_width="28dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/contact_sample_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/contact_search_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contact_icon_24dp" />

        <TextView
            android:id="@+id/contact_search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:text="@string/contact_sample_text_first_name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/contact_search_username"
            app:layout_constraintStart_toEndOf="@+id/contact_friend_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contact_search_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/contact_sample_text_email"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact_friend_icon"
            app:layout_constraintTop_toBottomOf="@+id/contact_search_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>